k8s/manifests/app/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: horsecare
  labels:
    app: horsecare
